finished solution and added css

--- a/Lab11MVC/Lab11MVC/Views/Home/Index.cshtml
+++ b/Lab11MVC/Lab11MVC/Views/Home/Index.cshtml
@@ -3,5 +3,30 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Home Page</title>
+</head>
+<body>
+    <div style="border-style: solid; width: 40%; margin: auto; margin-top:10%; background-color:red;">
+        <h1 style="text-align: center; color: white; font-size: 72px">TIME</h1>
+        <h2 style="text-align: center;">Man of the Year</h2>
+        <form method="post" style="text-align: center; margin-top:10%; margin-bottom:10%;">
+            <div style=" display: inline-block;">
+                <label style=" display: block; color: white; font-size: 25px; margin-right:3%;">Start Year</label>
+                <input type="number" name="startYear" />
+            </div>
+            <div style=" display: inline-block; margin-bottom:10%; margin-left:3%;">
+                <label style=" display: block; color: white; font-size: 25px;">End Year</label>
+                <input type="number" name="endYear" />
+            </div>
+
+            <button type="submit" style=" display: block; margin: auto;">Submit</button>
+
+        </form>
+    </div>
+</body>
+</html>
 
